Add collections2 to docs-tip-of-tree
Test: ./gradlew :docs-tip-of-tree:dokkaKotlinDocs

Change-Id: I3613b8a199f67451b40c63f4024869a2a56f561e

--- a/docs-tip-of-tree/build.gradle
+++ b/docs-tip-of-tree/build.gradle
@@ -18,7 +18,6 @@ dependencies {
     docs(project(":appcompat:appcompat-resources"))
     docs(project(":appsearch:appsearch"))
     docs(project(":appsearch:appsearch-local-storage"))
-    docs(project(":collection:collection"))
     docs(project(":arch:core:core-common"))
     docs(project(":arch:core:core-runtime"))
     docs(project(":arch:core:core-testing"))
@@ -45,8 +44,7 @@ dependencies {
     docs(project(":car:app:app-projected"))
     docs(project(":car:app:app-testing"))
     docs(project(":cardview:cardview"))
-    docs(project(":collection:collection"))
-    docs(project(":collection:collection-ktx"))
+    docs(project(":collection2:collection2"))
     docs(project(":compose:animation:animation"))
     docs(project(":compose:animation:animation-core"))
     docs(project(":compose:animation:animation-graphics"))
