--- a/compose/foundation/foundation/build.gradle
+++ b/compose/foundation/foundation/build.gradle
@@ -36,7 +36,7 @@ dependencies {
          * corresponding block above
          */
         api("androidx.annotation:annotation:1.1.0")
-        api("androidx.compose.animation:animation:1.0.0")
+        api(project(':compose:animation:animation'))
         api(project(':compose:runtime:runtime'))
         api(project(':compose:ui:ui'))
 
