--- a/metrics/integration-tests/janktest/src/main/AndroidManifest.xml
+++ b/metrics/integration-tests/janktest/src/main/AndroidManifest.xml
@@ -24,13 +24,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
         <activity
-            android:name=".MainActivity"
+            android:name=".JankLoggingActivity"
             android:label="@string/app_name"
             android:exported="true"
             android:theme="@style/Theme.Androidx.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".JankAggregatorActivity"
+            android:label="@string/app_name"
+            android:exported="true"
+            android:theme="@style/Theme.Androidx.NoActionBar">
+            <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
