--- a/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
@@ -103,5 +103,17 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/error_app_widget_info" />
         </receiver>
+
+        <receiver
+            android:name="androidx.glance.appwidget.demos.ScrollableAppWidgetReceiver"
+            android:label="@string/scrollable_widget_name"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/scrollable_app_widget_info" />
+        </receiver>
     </application>
 </manifest>
