Start glance view state definition
Add a state definition class for glance view data.
This is the first CL, there are more features to add to the view state.

Change-Id: I5441626b2bb257778c66e5c7c7c09b4eb09e3fc3
Test: :glance:glance:test
Bug: 197850276
Relnote: n/a

--- a/glance/glance-appwidget/integration-tests/demos/build.gradle
+++ b/glance/glance-appwidget/integration-tests/demos/build.gradle
@@ -23,6 +23,9 @@ plugins {
 }
 
 dependencies {
+    implementation "androidx.datastore:datastore-preferences-core:1.0.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-rc02"
+
     kotlinPlugin(project(":compose:compiler:compiler"))
 
     implementation(libs.kotlinStdlib)
