--- a/glance/glance-appwidget/build.gradle
+++ b/glance/glance-appwidget/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation project(path: ':annotation:annotation')
     implementation project(path: ':core:core-remoteviews')
     implementation project(path: ':core:core-ktx')
+    implementation project(path: ':datastore:datastore-core')
     implementation(libs.kotlinStdlib)
 
     testImplementation(project(":core:core-ktx"))
@@ -56,6 +57,9 @@ dependencies {
     testImplementation(libs.testRunner)
     testImplementation(libs.truth)
     testImplementation(libs.kotlinReflect)
+    testImplementation("androidx.datastore:datastore-core:1.0.0")
+    testImplementation("androidx.datastore:datastore-preferences-core:1.0.0")
+    testImplementation("androidx.datastore:datastore-preferences:1.0.0-rc02")
 
     androidTestImplementation("androidx.test.uiautomator:uiautomator:2.2.0")
     androidTestImplementation(project(":test:screenshot:screenshot"))
