Initial Glance-image sample for widgets
Simple showcase to show the different content scale by changing the content scale when the button is tapped.

Test: manual
Change-Id: I80a010ff20015c22c0296aae98003896360ac796

--- a/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
@@ -118,5 +118,17 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/scrollable_app_widget_info" />
         </receiver>
+
+        <receiver
+            android:name="androidx.glance.appwidget.demos.ImageAppWidgetReceiver"
+            android:label="@string/image_widget_name"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/image_app_widget_info" />
+        </receiver>
     </application>
 </manifest>
