--- a/navigation/navigation-fragment/build.gradle
+++ b/navigation/navigation-fragment/build.gradle
@@ -26,7 +26,7 @@ plugins {
 dependencies {
     api("androidx.fragment:fragment-ktx:1.4.0")
     api(project(":navigation:navigation-runtime"))
-    api("androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01")
+    api(projectOrArtifact(":slidingpanelayout:slidingpanelayout"))
     api(libs.kotlinStdlib)
     androidTestImplementation(project(":navigation:navigation-testing"))
     androidTestImplementation(projectOrArtifact(":fragment:fragment-testing"))
