--- a/room/room-paging/build.gradle
+++ b/room/room-paging/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 
     implementation(project(":room:room-runtime"))
     implementation(project(":room:room-ktx"))
-    implementation(projectOrArtifact(":paging:paging-common"))
+    api("androidx.paging:paging-common:3.1.0-beta01")
 
     androidTestImplementation(libs.kotlinCoroutinesTest)
     androidTestImplementation(libs.multidex)
