Add support for XML defined UserStyleSchema and ComplicationSlots
Bug: 192945210
Relnote: The UserStyleSchema and ComplicationSlots can now be defined in XML. This simplifies watch face construction, in addition WatchFaceMetadataClient queries are faster because it doesn't need to bind to the service to get the metadata.
Test: Manual testing where I confirmed that the minimal watchfaces still work and that the MetaDataClient can read an XML defined schema.
Change-Id: I85bfa873f945e489a64abaff492466a95e7119bc

--- a/wear/watchface/watchface-guava/build.gradle
+++ b/wear/watchface/watchface-guava/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     api(project(":wear:watchface:watchface"))
     api(libs.guavaAndroid)
 
+    androidTestImplementation(project(":wear:watchface:watchface-complications-rendering"))
     androidTestImplementation(project(":wear:watchface:watchface-client"))
     androidTestImplementation(libs.testExtJunit)
     androidTestImplementation(libs.testCore)
