--- a/wear/watchface/watchface-samples-minimal-complications/build.gradle
+++ b/wear/watchface/watchface-samples-minimal-complications/build.gradle
@@ -26,6 +26,7 @@ plugins {
 dependencies {
     api("androidx.activity:activity:1.3.1")
     api(project(":wear:watchface:watchface"))
+    api(project(":wear:watchface:watchface-client-guava"))
     api(project(":wear:watchface:watchface-complications-rendering"))
     api(project(":wear:watchface:watchface-editor"))
     api(project(":wear:watchface:watchface-editor-guava"))
