--- a/wear/watchface/watchface-samples-minimal-complications/src/main/AndroidManifest.xml
+++ b/wear/watchface/watchface-samples-minimal-complications/src/main/AndroidManifest.xml
@@ -57,6 +57,10 @@
           android:name="com.google.android.wearable.watchface.companionBuiltinConfigurationEnabled"
           android:value="true" />
 
+      <meta-data
+          android:name="androidx.wear.watchface.XmlSchemaAndComplicationSlotsDefinition"
+          android:resource="@xml/xml_watchface" />
+
     </service>
 
   </application>
