Fix Androidx.tracing compat behavior, avoid class verification error
Fixes:204368464
Test: AndroidxTracingTraceTest on API 24

Note that the test can't run against tip of tree androidx.tracing long
term (and will have to revert to a stable dependency when benchmark
goes beta), but it's still useful for now.

Change-Id: I2b28acecd32e440c84f2814a5d748f047bfe9d68

--- a/benchmark/benchmark-macro/build.gradle
+++ b/benchmark/benchmark-macro/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 
     implementation(project(":benchmark:benchmark-common"))
     implementation("androidx.profileinstaller:profileinstaller:1.0.3")
-    implementation("androidx.tracing:tracing-ktx:1.0.0")
+    implementation(project(":tracing:tracing-ktx"))
     implementation(libs.testCore)
     implementation(libs.testUiautomator)
 
