Pin clients of androidx.core to latest stable release
Fixes: 201538573
Test: ./gradlew bOS
Change-Id: I0add1d10b7316b9de2aa0cea8e356e0d87fd78be

--- a/documentfile/documentfile/build.gradle
+++ b/documentfile/documentfile/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 dependencies {
     implementation("androidx.annotation:annotation:1.1.0")
-    implementation(project(":core:core"))
+    implementation("androidx.core:core:1.7.0")
 
     annotationProcessor(libs.nullaway)
 
