--- a/core/core-appdigest/build.gradle
+++ b/core/core-appdigest/build.gradle
@@ -25,7 +25,7 @@ plugins {
 
 dependencies {
     api("androidx.annotation:annotation:1.0.0")
-    implementation(project(":core:core"))
+    implementation("androidx.core:core:1.7.0")
     androidTestImplementation(libs.testExtJunit)
     androidTestImplementation(libs.testCore)
     androidTestImplementation(libs.testRunner)
