--- a/draganddrop/draganddrop/build.gradle
+++ b/draganddrop/draganddrop/build.gradle
@@ -26,7 +26,7 @@ plugins {
 dependencies {
     api("androidx.annotation:annotation:1.1.0")
     api("androidx.appcompat:appcompat:1.3.0")
-    api(project(":core:core"))
+    api("androidx.core:core:1.7.0")
     annotationProcessor(libs.nullaway)
     implementation("androidx.core:core:1.3.0-beta01")
     androidTestImplementation(libs.robolectric)
