--- a/viewpager/viewpager/build.gradle
+++ b/viewpager/viewpager/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 dependencies {
     api("androidx.annotation:annotation:1.1.0")
-    implementation project(":core:core")
+    implementation "androidx.core:core:1.7.0"
     api("androidx.customview:customview:1.0.0")
 
     androidTestImplementation(libs.testExtJunit)
