--- a/docs-public/build.gradle
+++ b/docs-public/build.gradle
@@ -14,10 +14,10 @@ dependencies {
     docs("androidx.annotation:annotation-experimental:1.2.0-alpha01")
     docs("androidx.appcompat:appcompat:1.4.0-rc01")
     docs("androidx.appcompat:appcompat-resources:1.4.0-rc01")
-    docs("androidx.appsearch:appsearch:1.0.0-alpha03")
-    docs("androidx.appsearch:appsearch-ktx:1.0.0-alpha03")
-    docs("androidx.appsearch:appsearch-local-storage:1.0.0-alpha03")
-    docs("androidx.appsearch:appsearch-platform-storage:1.0.0-alpha03")
+    docs("androidx.appsearch:appsearch:1.0.0-alpha04")
+    docs("androidx.appsearch:appsearch-ktx:1.0.0-alpha04")
+    docs("androidx.appsearch:appsearch-local-storage:1.0.0-alpha04")
+    docs("androidx.appsearch:appsearch-platform-storage:1.0.0-alpha04")
     docs("androidx.arch.core:core-common:2.1.0")
     docs("androidx.arch.core:core-runtime:2.1.0")
     docs("androidx.arch.core:core-testing:2.1.0")
@@ -30,7 +30,7 @@ dependencies {
     docs("androidx.biometric:biometric:1.2.0-alpha03")
     docs("androidx.biometric:biometric-ktx:1.2.0-alpha03")
     samples("androidx.biometric:biometric-ktx-samples:1.2.0-alpha03")
-    docs("androidx.browser:browser:1.4.0-rc01")
+    docs("androidx.browser:browser:1.4.0")
     docs("androidx.camera:camera-camera2:1.1.0-alpha10")
     docs("androidx.camera:camera-core:1.1.0-alpha10")
     docs("androidx.camera:camera-extensions:1.0.0-alpha30")
@@ -38,61 +38,61 @@ dependencies {
     docs("androidx.camera:camera-lifecycle:1.1.0-alpha10")
     docs("androidx.camera:camera-video:1.1.0-alpha10")
     docs("androidx.camera:camera-view:1.0.0-alpha30")
-    docs("androidx.car.app:app:1.1.0-beta01")
-    docs("androidx.car.app:app-automotive:1.1.0-beta01")
-    docs("androidx.car.app:app-projected:1.1.0-beta01")
-    docs("androidx.car.app:app-testing:1.1.0-beta01")
+    docs("androidx.car.app:app:1.2.0-alpha01")
+    docs("androidx.car.app:app-automotive:1.2.0-alpha01")
+    docs("androidx.car.app:app-projected:1.2.0-alpha01")
+    docs("androidx.car.app:app-testing:1.2.0-alpha01")
     docs("androidx.cardview:cardview:1.0.0")
     docs("androidx.collection:collection:1.2.0-beta01")
     docs("androidx.collection:collection-ktx:1.2.0-beta01")
-    docs("androidx.compose.animation:animation:1.1.0-beta01")
-    docs("androidx.compose.animation:animation-core:1.1.0-beta01")
-    docs("androidx.compose.animation:animation-graphics:1.1.0-beta01")
-    samples("androidx.compose.animation:animation-samples:1.1.0-beta01")
-    samples("androidx.compose.animation:animation-core-samples:1.1.0-beta01")
-    samples("androidx.compose.animation:animation-graphics-samples:1.1.0-beta01")
-    docs("androidx.compose.foundation:foundation:1.1.0-beta01")
-    docs("androidx.compose.foundation:foundation-layout:1.1.0-beta01")
-    samples("androidx.compose.foundation:foundation-layout-samples:1.1.0-beta01")
-    samples("androidx.compose.foundation:foundation-samples:1.1.0-beta01")
+    docs("androidx.compose.animation:animation:1.1.0-beta02")
+    docs("androidx.compose.animation:animation-core:1.1.0-beta02")
+    docs("androidx.compose.animation:animation-graphics:1.1.0-beta02")
+    samples("androidx.compose.animation:animation-samples:1.1.0-beta02")
+    samples("androidx.compose.animation:animation-core-samples:1.1.0-beta02")
+    samples("androidx.compose.animation:animation-graphics-samples:1.1.0-beta02")
+    docs("androidx.compose.foundation:foundation:1.1.0-beta02")
+    docs("androidx.compose.foundation:foundation-layout:1.1.0-beta02")
+    samples("androidx.compose.foundation:foundation-layout-samples:1.1.0-beta02")
+    samples("androidx.compose.foundation:foundation-samples:1.1.0-beta02")
     docs("androidx.compose.material3:material3:1.0.0-alpha01")
     samples("androidx.compose.material3:material3-samples:1.0.0-alpha01")
-    docs("androidx.compose.material:material:1.1.0-beta01")
-    docs("androidx.compose.material:material-icons-core:1.1.0-beta01")
-    samples("androidx.compose.material:material-icons-core-samples:1.1.0-beta01")
-    docs("androidx.compose.material:material-ripple:1.1.0-beta01")
-    samples("androidx.compose.material:material-samples:1.1.0-beta01")
-    docs("androidx.compose.runtime:runtime:1.1.0-beta01")
-    docs("androidx.compose.runtime:runtime-livedata:1.1.0-beta01")
-    samples("androidx.compose.runtime:runtime-livedata-samples:1.1.0-beta01")
-    docs("androidx.compose.runtime:runtime-rxjava2:1.1.0-beta01")
-    samples("androidx.compose.runtime:runtime-rxjava2-samples:1.1.0-beta01")
-    docs("androidx.compose.runtime:runtime-rxjava3:1.1.0-beta01")
-    samples("androidx.compose.runtime:runtime-rxjava3-samples:1.1.0-beta01")
-    docs("androidx.compose.runtime:runtime-saveable:1.1.0-beta01")
-    samples("androidx.compose.runtime:runtime-saveable-samples:1.1.0-beta01")
-    samples("androidx.compose.runtime:runtime-samples:1.1.0-beta01")
-    docs("androidx.compose.ui:ui:1.1.0-beta01")
-    docs("androidx.compose.ui:ui-geometry:1.1.0-beta01")
-    docs("androidx.compose.ui:ui-graphics:1.1.0-beta01")
-    samples("androidx.compose.ui:ui-graphics-samples:1.1.0-beta01")
-    docs("androidx.compose.ui:ui-test:1.1.0-beta01")
-    docs("androidx.compose.ui:ui-test-junit4:1.1.0-beta01")
-    docs("androidx.compose.ui:ui-text:1.1.0-beta01")
-    samples("androidx.compose.ui:ui-text-samples:1.1.0-beta01")
-    docs("androidx.compose.ui:ui-tooling:1.1.0-beta01")
-    docs("androidx.compose.ui:ui-tooling-data:1.1.0-beta01")
-    docs("androidx.compose.ui:ui-tooling-preview:1.1.0-beta01")
-    docs("androidx.compose.ui:ui-unit:1.1.0-beta01")
-    samples("androidx.compose.ui:ui-unit-samples:1.1.0-beta01")
-    docs("androidx.compose.ui:ui-util:1.1.0-beta01")
-    docs("androidx.compose.ui:ui-viewbinding:1.1.0-beta01")
-    samples("androidx.compose.ui:ui-viewbinding-samples:1.1.0-beta01")
-    samples("androidx.compose.ui:ui-samples:1.1.0-beta01")
+    docs("androidx.compose.material:material:1.1.0-beta02")
+    docs("androidx.compose.material:material-icons-core:1.1.0-beta02")
+    samples("androidx.compose.material:material-icons-core-samples:1.1.0-beta02")
+    docs("androidx.compose.material:material-ripple:1.1.0-beta02")
+    samples("androidx.compose.material:material-samples:1.1.0-beta02")
+    docs("androidx.compose.runtime:runtime:1.1.0-beta02")
+    docs("androidx.compose.runtime:runtime-livedata:1.1.0-beta02")
+    samples("androidx.compose.runtime:runtime-livedata-samples:1.1.0-beta02")
+    docs("androidx.compose.runtime:runtime-rxjava2:1.1.0-beta02")
+    samples("androidx.compose.runtime:runtime-rxjava2-samples:1.1.0-beta02")
+    docs("androidx.compose.runtime:runtime-rxjava3:1.1.0-beta02")
+    samples("androidx.compose.runtime:runtime-rxjava3-samples:1.1.0-beta02")
+    docs("androidx.compose.runtime:runtime-saveable:1.1.0-beta02")
+    samples("androidx.compose.runtime:runtime-saveable-samples:1.1.0-beta02")
+    samples("androidx.compose.runtime:runtime-samples:1.1.0-beta02")
+    docs("androidx.compose.ui:ui:1.1.0-beta02")
+    docs("androidx.compose.ui:ui-geometry:1.1.0-beta02")
+    docs("androidx.compose.ui:ui-graphics:1.1.0-beta02")
+    samples("androidx.compose.ui:ui-graphics-samples:1.1.0-beta02")
+    docs("androidx.compose.ui:ui-test:1.1.0-beta02")
+    docs("androidx.compose.ui:ui-test-junit4:1.1.0-beta02")
+    docs("androidx.compose.ui:ui-text:1.1.0-beta02")
+    samples("androidx.compose.ui:ui-text-samples:1.1.0-beta02")
+    docs("androidx.compose.ui:ui-tooling:1.1.0-beta02")
+    docs("androidx.compose.ui:ui-tooling-data:1.1.0-beta02")
+    docs("androidx.compose.ui:ui-tooling-preview:1.1.0-beta02")
+    docs("androidx.compose.ui:ui-unit:1.1.0-beta02")
+    samples("androidx.compose.ui:ui-unit-samples:1.1.0-beta02")
+    docs("androidx.compose.ui:ui-util:1.1.0-beta02")
+    docs("androidx.compose.ui:ui-viewbinding:1.1.0-beta02")
+    samples("androidx.compose.ui:ui-viewbinding-samples:1.1.0-beta02")
+    samples("androidx.compose.ui:ui-samples:1.1.0-beta02")
     docs("androidx.concurrent:concurrent-futures:1.1.0")
     docs("androidx.concurrent:concurrent-futures-ktx:1.1.0")
     docs("androidx.contentpager:contentpager:1.0.0")
-    docs("androidx.coordinatorlayout:coordinatorlayout:1.1.0")
+    docs("androidx.coordinatorlayout:coordinatorlayout:1.2.0-alpha01")
     docs("androidx.core:core-google-shortcuts:1.1.0-alpha02")
     docs("androidx.core:core-role:1.1.0-alpha02")
     docs("androidx.core:core-animation:1.0.0-alpha02")
@@ -124,11 +124,11 @@ dependencies {
     docs("androidx.enterprise:enterprise-feedback:1.1.0")
     docs("androidx.enterprise:enterprise-feedback-testing:1.1.0")
     docs("androidx.exifinterface:exifinterface:1.3.3")
-    docs("androidx.fragment:fragment:1.4.0-beta01")
-    docs("androidx.fragment:fragment-ktx:1.4.0-beta01")
-    docs("androidx.fragment:fragment-testing:1.4.0-beta01")
+    docs("androidx.fragment:fragment:1.4.0-rc01")
+    docs("androidx.fragment:fragment-ktx:1.4.0-rc01")
+    docs("androidx.fragment:fragment-testing:1.4.0-rc01")
     docs("androidx.gridlayout:gridlayout:1.0.0")
-    docs("androidx.health:health-services-client:1.0.0-alpha02")
+    docs("androidx.health:health-services-client:1.0.0-alpha03")
     docs("androidx.heifwriter:heifwriter:1.1.0-alpha01")
     docs("androidx.hilt:hilt-common:1.0.0-beta01")
     docs("androidx.hilt:hilt-navigation:1.0.0-beta01")
@@ -166,39 +166,39 @@ dependencies {
     docs("androidx.media2:media2-player:1.2.0")
     docs("androidx.media2:media2-session:1.2.0")
     docs("androidx.media2:media2-widget:1.2.0")
-    docs("androidx.media:media:1.4.3")
+    docs("androidx.media:media:1.5.0-alpha01")
     docs("androidx.mediarouter:mediarouter:1.2.5")
-    docs("androidx.navigation:navigation-common:2.4.0-beta01")
-    docs("androidx.navigation:navigation-common-ktx:2.4.0-beta01")
-    docs("androidx.navigation:navigation-compose:2.4.0-beta01")
-    samples("androidx.navigation:navigation-compose-samples:2.4.0-beta01")
-    docs("androidx.navigation:navigation-dynamic-features-fragment:2.4.0-beta01")
-    docs("androidx.navigation:navigation-dynamic-features-runtime:2.4.0-beta01")
-    docs("androidx.navigation:navigation-fragment:2.4.0-beta01")
-    docs("androidx.navigation:navigation-fragment-ktx:2.4.0-beta01")
-    docs("androidx.navigation:navigation-runtime:2.4.0-beta01")
-    docs("androidx.navigation:navigation-runtime-ktx:2.4.0-beta01")
-    docs("androidx.navigation:navigation-testing:2.4.0-beta01")
-    docs("androidx.navigation:navigation-ui:2.4.0-beta01")
-    docs("androidx.navigation:navigation-ui-ktx:2.4.0-beta01")
-    docs("androidx.paging:paging-common:3.1.0-beta01")
-    docs("androidx.paging:paging-common-ktx:3.1.0-beta01")
-    docs("androidx.paging:paging-compose:1.0.0-alpha14")
+    docs("androidx.navigation:navigation-common:2.4.0-beta02")
+    docs("androidx.navigation:navigation-common-ktx:2.4.0-beta02")
+    docs("androidx.navigation:navigation-compose:2.4.0-beta02")
+    samples("androidx.navigation:navigation-compose-samples:2.4.0-beta02")
+    docs("androidx.navigation:navigation-dynamic-features-fragment:2.4.0-beta02")
+    docs("androidx.navigation:navigation-dynamic-features-runtime:2.4.0-beta02")
+    docs("androidx.navigation:navigation-fragment:2.4.0-beta02")
+    docs("androidx.navigation:navigation-fragment-ktx:2.4.0-beta02")
+    docs("androidx.navigation:navigation-runtime:2.4.0-beta02")
+    docs("androidx.navigation:navigation-runtime-ktx:2.4.0-beta02")
+    docs("androidx.navigation:navigation-testing:2.4.0-beta02")
+    docs("androidx.navigation:navigation-ui:2.4.0-beta02")
+    docs("androidx.navigation:navigation-ui-ktx:2.4.0-beta02")
+    docs("androidx.paging:paging-common:3.1.0-rc01")
+    docs("androidx.paging:paging-common-ktx:3.1.0-rc01")
+    docs("androidx.paging:paging-compose:1.0.0-alpha15")
     samples("androidx.paging:paging-compose-samples:3.0.0-alpha08")
-    docs("androidx.paging:paging-guava:3.1.0-beta01")
-    docs("androidx.paging:paging-runtime:3.1.0-beta01")
-    docs("androidx.paging:paging-runtime-ktx:3.1.0-beta01")
-    docs("androidx.paging:paging-rxjava2:3.1.0-beta01")
-    docs("androidx.paging:paging-rxjava2-ktx:3.1.0-beta01")
-    docs("androidx.paging:paging-rxjava3:3.1.0-beta01")
-    samples("androidx.paging:paging-samples:3.1.0-beta01")
+    docs("androidx.paging:paging-guava:3.1.0-rc01")
+    docs("androidx.paging:paging-runtime:3.1.0-rc01")
+    docs("androidx.paging:paging-runtime-ktx:3.1.0-rc01")
+    docs("androidx.paging:paging-rxjava2:3.1.0-rc01")
+    docs("androidx.paging:paging-rxjava2-ktx:3.1.0-rc01")
+    docs("androidx.paging:paging-rxjava3:3.1.0-rc01")
+    samples("androidx.paging:paging-samples:3.1.0-rc01")
     docs("androidx.palette:palette:1.0.0")
     docs("androidx.palette:palette-ktx:1.0.0")
     docs("androidx.percentlayout:percentlayout:1.0.1")
-    docs("androidx.preference:preference:1.2.0-alpha01")
-    docs("androidx.preference:preference-ktx:1.2.0-alpha01")
+    docs("androidx.preference:preference:1.2.0-alpha02")
+    docs("androidx.preference:preference-ktx:1.2.0-alpha02")
     docs("androidx.print:print:1.1.0-beta01")
-    docs("androidx.profileinstaller:profileinstaller:1.1.0-beta01")
+    docs("androidx.profileinstaller:profileinstaller:1.1.0-beta02")
     docs("androidx.recommendation:recommendation:1.0.0")
     docs("androidx.recyclerview:recyclerview:1.3.0-alpha01")
     docs("androidx.recyclerview:recyclerview-selection:2.0.0-alpha01")
@@ -221,7 +221,7 @@ dependencies {
     docs("androidx.security:security-crypto:1.1.0-alpha03")
     docs("androidx.security:security-crypto-ktx:1.1.0-alpha02")
     docs("androidx.security:security-identity-credential:1.0.0-alpha03")
-    docs("androidx.sharetarget:sharetarget:1.2.0-beta01")
+    docs("androidx.sharetarget:sharetarget:1.2.0-rc01")
     docs("androidx.slice:slice-builders:1.1.0-alpha02")
     docs("androidx.slice:slice-builders-ktx:1.0.0-alpha08")
     docs("androidx.slice:slice-core:1.1.0-alpha02")
@@ -233,8 +233,8 @@ dependencies {
     docs("androidx.startup:startup-runtime:1.1.0")
     docs("androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01")
     docs("androidx.textclassifier:textclassifier:1.0.0-alpha03")
-    docs("androidx.tracing:tracing:1.0.0")
-    docs("androidx.tracing:tracing-ktx:1.0.0")
+    docs("androidx.tracing:tracing:1.1.0-alpha01")
+    docs("androidx.tracing:tracing-ktx:1.1.0-alpha01")
     docs("androidx.transition:transition:1.4.1")
     docs("androidx.transition:transition-ktx:1.4.1")
     docs("androidx.tvprovider:tvprovider:1.1.0-alpha01")
@@ -244,30 +244,30 @@ dependencies {
     docs("androidx.versionedparcelable:versionedparcelable:1.1.1")
     docs("androidx.viewpager2:viewpager2:1.1.0-beta01")
     docs("androidx.viewpager:viewpager:1.1.0-alpha01")
-    docs("androidx.wear.compose:compose-foundation:1.0.0-alpha09")
-    samples("androidx.wear.compose:compose-foundation-samples:1.0.0-alpha09")
-    docs("androidx.wear.compose:compose-material:1.0.0-alpha09")
-    samples("androidx.wear.compose:compose-material-samples:1.0.0-alpha09")
-    docs("androidx.wear.compose:compose-navigation:1.0.0-alpha09")
-    docs("androidx.wear.tiles:tiles:1.0.0-rc01")
-    docs("androidx.wear.tiles:tiles-proto:1.0.0-rc01")
-    docs("androidx.wear.tiles:tiles-renderer:1.0.0-rc01")
-    docs("androidx.wear.tiles:tiles-testing:1.0.0-rc01")
-    docs("androidx.wear.watchface:watchface:1.0.0-beta01")
-    docs("androidx.wear.watchface:watchface-client:1.0.0-beta01")
-    docs("androidx.wear.watchface:watchface-client-guava:1.0.0-beta01")
-    docs("androidx.wear.watchface:watchface-complications:1.0.0-beta01")
-    docs("androidx.wear.watchface:watchface-complications-data:1.0.0-beta01")
-    docs("androidx.wear.watchface:watchface-complications-data-source:1.0.0-beta01")
-    docs("androidx.wear.watchface:watchface-complications-data-source-ktx:1.0.0-beta01")
-    docs("androidx.wear.watchface:watchface-complications-rendering:1.0.0-beta01")
-    docs("androidx.wear.watchface:watchface-data:1.0.0-beta01")
-    docs("androidx.wear.watchface:watchface-editor:1.0.0-beta01")
-    docs("androidx.wear.watchface:watchface-editor-guava:1.0.0-beta01")
-    samples("androidx.wear.watchface:watchface-editor-samples:1.0.0-beta01")
-    docs("androidx.wear.watchface:watchface-guava:1.0.0-beta01")
-    samples("androidx.wear.watchface:watchface-samples:1.0.0-beta01")
-    docs("androidx.wear.watchface:watchface-style:1.0.0-beta01")
+    docs("androidx.wear.compose:compose-foundation:1.0.0-alpha10")
+    samples("androidx.wear.compose:compose-foundation-samples:1.0.0-alpha10")
+    docs("androidx.wear.compose:compose-material:1.0.0-alpha10")
+    samples("androidx.wear.compose:compose-material-samples:1.0.0-alpha10")
+    docs("androidx.wear.compose:compose-navigation:1.0.0-alpha10")
+    docs("androidx.wear.tiles:tiles:1.0.0")
+    docs("androidx.wear.tiles:tiles-proto:1.0.0")
+    docs("androidx.wear.tiles:tiles-renderer:1.0.0")
+    docs("androidx.wear.tiles:tiles-testing:1.0.0")
+    docs("androidx.wear.watchface:watchface:1.0.0-rc01")
+    docs("androidx.wear.watchface:watchface-client:1.0.0-rc01")
+    docs("androidx.wear.watchface:watchface-client-guava:1.0.0-rc01")
+    docs("androidx.wear.watchface:watchface-complications:1.0.0-rc01")
+    docs("androidx.wear.watchface:watchface-complications-data:1.0.0-rc01")
+    docs("androidx.wear.watchface:watchface-complications-data-source:1.0.0-rc01")
+    docs("androidx.wear.watchface:watchface-complications-data-source-ktx:1.0.0-rc01")
+    docs("androidx.wear.watchface:watchface-complications-rendering:1.0.0-rc01")
+    docs("androidx.wear.watchface:watchface-data:1.0.0-rc01")
+    docs("androidx.wear.watchface:watchface-editor:1.0.0-rc01")
+    docs("androidx.wear.watchface:watchface-editor-guava:1.0.0-rc01")
+    samples("androidx.wear.watchface:watchface-editor-samples:1.0.0-rc01")
+    docs("androidx.wear.watchface:watchface-guava:1.0.0-rc01")
+    samples("androidx.wear.watchface:watchface-samples:1.0.0-rc01")
+    docs("androidx.wear.watchface:watchface-style:1.0.0-rc01")
     docs("androidx.wear:wear:1.3.0-alpha01")
     stubs(fileTree(dir: "../wear/wear_stubs/", include: ["com.google.android.wearable-stubs.jar"]))
     docs("androidx.wear:wear-ongoing:1.1.0-alpha01")
