Track tip of tree dependencies in macrobenchmark-target, to monitor tot perf
Test: TrivialStartupBenchmark # now with ANDROIDX_PROJECTS=MAIN

Downside is that we can't open both view system and compose
macrobenchmarks without opening full project.

Change-Id: I475a36c180408139c869695102e70c79b8a3bff5

--- a/compose/integration-tests/macrobenchmark-target/build.gradle
+++ b/compose/integration-tests/macrobenchmark-target/build.gradle
@@ -19,12 +19,12 @@ dependencies {
     kotlinPlugin(project(":compose:compiler:compiler"))
 
     implementation(libs.kotlinStdlib)
+    implementation(project(":activity:activity-compose"))
     implementation(project(":compose:foundation:foundation-layout"))
     implementation(project(":compose:material:material"))
     implementation(project(":compose:runtime:runtime"))
     implementation(project(":compose:ui:ui"))
     implementation(project(":compose:ui:ui-tooling"))
-    implementation("androidx.activity:activity-compose:1.3.1")
 }
 
 android.defaultConfig.minSdkVersion 21
