Modify sample to showcase all actions
- Create a list of buttons with the different activity actions
- Showcase clickable modifier with actionUpdate
- Simplify widget demo xml parts

Test: manual
Change-Id: Iad7ed6382d1c775f02027504fc7cd8044e16b53a

--- a/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/demos_label">
+
+        <activity android:name=".ActionDemoActivity" />
+
         <receiver
             android:name="androidx.glance.appwidget.demos.ResponsiveAppWidgetReceiver"
             android:label="@string/responsive_widget_name"
@@ -78,8 +81,8 @@
         </receiver>
 
         <receiver
-            android:name="androidx.glance.appwidget.demos.UpdatingAppWidgetReceiver"
-            android:label="@string/updating_widget_name"
+            android:name="androidx.glance.appwidget.demos.ActionAppWidgetReceiver"
+            android:label="@string/action_widget_name"
             android:enabled="@bool/glance_appwidget_available"
             android:exported="false">
             <intent-filter>
@@ -88,7 +91,7 @@
             </intent-filter>
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/updating_app_widget_info" />
+                android:resource="@xml/action_app_widget_info" />
         </receiver>
 
         <receiver
