--- a/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
@@ -76,6 +76,7 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/compound_button_app_widget_info" />
         </receiver>
+
         <receiver
             android:name="androidx.glance.appwidget.demos.UpdatingAppWidgetReceiver"
             android:label="@string/updating_widget_name"
@@ -88,6 +89,19 @@
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/updating_app_widget_info" />
+        </receiver>
+
+        <receiver
+            android:name="androidx.glance.appwidget.demos.ErrorUiAppWidgetReceiver"
+            android:label="@string/error_widget_name"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.intent.action.LOCALE_CHANGED" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/error_app_widget_info" />
         </receiver>
     </application>
 </manifest>
