Add a number of missing gradle properties to playground
Enable a number of gradle properties used by the main build.
This removes some warnings (android.disableAutomaticComponentCreation)
and speeds up configuration.

Test: ./gradlew jar (inside room directory)
Change-Id: I3e176cc01e4bc05517c0237bda976fb1940ce8b4

--- a/playground-common/androidx-shared.properties
+++ b/playground-common/androidx-shared.properties
@@ -32,3 +32,13 @@ android.defaults.buildfeatures.buildconfig=false
 android.defaults.buildfeatures.renderscript=false
 android.defaults.buildfeatures.resvalues=false
 android.defaults.buildfeatures.shaders=false
+android.disableAutomaticComponentCreation=true
+
+org.gradle.configureondemand=true
+org.gradle.parallel=true
+org.gradle.caching=true
+# Disabled due to https://github.com/gradle/gradle/issues/18626
+# org.gradle.vfs.watch=true
+org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache-problems=warn
+org.gradle.unsafe.configuration-cache.max-problems=4000
