Only enable demos on the correct APIs
Also stop exporting the receivers, as it is not needed.

Bug: 197214267
Relnote: n/a
Test: n/a
Change-Id: I80a32cc81cc65b7da6d975dd2080c6754b128573

--- a/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <receiver
             android:name="androidx.glance.appwidget.demos.ResponsiveAppWidgetReceiver"
             android:label="@string/responsive_widget_name"
-            android:exported="true">
+            android:enabled="@bool/glance_appwidget_available"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.intent.action.LOCALE_CHANGED" />
@@ -38,7 +39,8 @@
         <receiver
             android:name="androidx.glance.appwidget.demos.ExactAppWidgetReceiver"
             android:label="@string/exact_widget_name"
-            android:exported="true">
+            android:enabled="@bool/glance_appwidget_available"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.intent.action.LOCALE_CHANGED" />
@@ -51,7 +53,8 @@
         <receiver
             android:name="androidx.glance.appwidget.demos.ResizingAppWidgetReceiver"
             android:label="@string/resizing_widget_name"
-            android:exported="true">
+            android:enabled="@bool/glance_appwidget_available"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.intent.action.LOCALE_CHANGED" />
@@ -64,7 +67,8 @@
         <receiver
             android:name="androidx.glance.appwidget.demos.CompoundButtonAppWidgetReceiver"
             android:label="@string/compound_button_widget_name"
-            android:exported="true">
+            android:enabled="@bool/glance_appwidget_available"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -75,7 +79,8 @@
         <receiver
             android:name="androidx.glance.appwidget.demos.UpdatingAppWidgetReceiver"
             android:label="@string/updating_widget_name"
-            android:exported="true">
+            android:enabled="@bool/glance_appwidget_available"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.intent.action.LOCALE_CHANGED" />
