Add support for text colors in Wear and App Widgets
This uses the same color provider as for the background modifier, with the same treatment of day/night vs fixed and resource colors.

Bug: 205022137
Fix: 202150620
relnote: n/a
Test: sample app, scuba, robolectric
Change-Id: I9664a0561d75f25d8210deb1857787b31d533015

--- a/glance/glance-appwidget/src/test/AndroidManifest.xml
+++ b/glance/glance-appwidget/src/test/AndroidManifest.xml
@@ -16,11 +16,11 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="androidx.glance.test">
+    package="androidx.glance.appwidget.test">
     <uses-permission android:name="android.permission.BIND_APPWIDGET" />
     <application>
         <receiver
-            android:name="androidx.glance.test.SampleAppWidgetProvider"
+            android:name="androidx.glance.appwidget.SampleAppWidgetProvider"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
