--- a/camera/integration-tests/extensionstestapp/build.gradle
+++ b/camera/integration-tests/extensionstestapp/build.gradle
@@ -18,6 +18,7 @@
 plugins {
     id("AndroidXPlugin")
     id("com.android.application")
+    id("kotlin-android")
 }
 
 android {
@@ -48,7 +49,11 @@ dependencies {
 
     // Android Support Library
     api(libs.constraintLayout)
-    implementation("androidx.appcompat:appcompat:1.1.0")
+    implementation(libs.kotlinStdlib)
+    implementation("androidx.appcompat:appcompat:1.2.0")
+    implementation("androidx.activity:activity-ktx:1.2.0")
+    implementation('androidx.concurrent:concurrent-futures-ktx:1.1.0')
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
     // Guava
     implementation(libs.guavaAndroid)
