--- a/wear/watchface/watchface-complications-permission-dialogs-sample/build.gradle
+++ b/wear/watchface/watchface-complications-permission-dialogs-sample/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 The Android Open Source Project
+ * Copyright 2021 The Android Open Source Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,19 +26,16 @@ plugins {
 
 dependencies {
     compileOnly(project(":annotation:annotation-sampled"))
-    api(project(":wear:watchface:watchface"))
-    implementation(project(":wear:watchface:watchface-complications-rendering"))
-    implementation(project(":wear:watchface:watchface-complications-permission-dialogs-sample"))
-    implementation(project(":wear:watchface:watchface-editor-samples"))
+    api("androidx.fragment:fragment:1.2.0")
     api(libs.kotlinStdlib)
 }
 
 androidx {
-    name = "AndroidX Wear Watchface Samples"
+    name = "AndroidX Wear Watchface Permission Dialog Samples"
     type = LibraryType.SAMPLES
     mavenGroup = LibraryGroups.WEAR_WATCHFACE
-    inceptionYear = "2020"
-    description = "Contains the sample code for the Androidx Wear Watchface library"
+    inceptionYear = "2021"
+    description = "Contains sample code for building Watchface Permission Dialogs"
 }
 
 android {
