Restructure buildSrc libraries
Make public library a real library to make IJ happy.

Test: Gradle sync in studio, buildSrc/private/ now resolves
Bug: 202177757
Change-Id: I98242e4c3c398d3350b45570a2556a25bc8662bb

--- a/buildSrc-tests/build.gradle
+++ b/buildSrc-tests/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation(gradleApi())
     testImplementation(libs.junit)
     implementation(project.files(new File(BuildServerConfigurationKt.getRootOutDirectory(project), "buildSrc/private/build/libs/private.jar")))
+    implementation(project.files(new File(BuildServerConfigurationKt.getRootOutDirectory(project), "buildSrc/public/build/libs/public.jar")))
 }
 
 // Also do style checking of the buildSrc project from within this project too
