--- a/buildSrc/settings.gradle
+++ b/buildSrc/settings.gradle
@@ -17,6 +17,7 @@
 include ":jetpad-integration"
 include ":plugins"
 include ":private"
+include ":public"
 
 enableFeaturePreview("VERSION_CATALOGS")
 
