Explicitly specify kotlin version used in buildSrc
Studio doesn't seem to realize what version is used if the
value is not set explicitly. This change is a no-op otherwise.

Test: open Version.kt file in AS
Bug: 202177757
Change-Id: I84d2a19abdb7e2d8c716ca9fdde83752debb9344

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -41,6 +41,8 @@ allprojects {
                     // Details: KT-46445 and https://github.com/gradle/gradle/issues/17052
                     "-Xsam-conversions=class"
             ]
+            languageVersion = "1.5"
+            apiVersion = "1.5"
         }
     }
 }
