--- a/datastore/settings.gradle
+++ b/datastore/settings.gradle
@@ -15,13 +15,22 @@
  */
 
 // see ../playground-common/README.md for details on how this works
+pluginManagement {
+    includeBuild "../playground-common/playground-plugin"
+}
+plugins {
+    id "playground"
+}
+
 rootProject.name = "datastore-playground"
-apply from: "../playground-common/playground-include-settings.gradle"
-setupPlayground(this, "..")
-selectProjectsFromAndroidX({ name ->
-    if (name.startsWith(":datastore")) return true
-    if (name == ":annotation:annotation-sampled") return true
-    if (name == ":internal-testutils-truth") return true
-    return false
-})
+
+playground {
+    setupPlayground("..")
+    selectProjectsFromAndroidX({ name ->
+        if (name.startsWith(":datastore")) return true
+        if (name == ":annotation:annotation-sampled") return true
+        if (name == ":internal-testutils-truth") return true
+        return false
+    })
+}
 
