--- a/playground-common/playground-plugin/settings.gradle
+++ b/playground-common/playground-plugin/settings.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 The Android Open Source Project
+ * Copyright 2021 The Android Open Source Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,22 +13,4 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-// see ../playground-common/README.md for details on how this works
-pluginManagement {
-    includeBuild "../playground-common/playground-plugin"
-}
-plugins {
-    id "playground"
-}
-
-rootProject.name = "biometric-playground"
-
-playground {
-    setupPlayground("..")
-    selectProjectsFromAndroidX({ name ->
-        if (name.startsWith(":biometric")) return true
-        if (name == ":annotation:annotation-sampled") return true
-        return false
-    })
-}
+ rootProject.name = "playground-plugin"
