Fix work playground build
Allow fetching from gradlePluginPortal() as shadow plugin
come from that repository.

Test: ./gradlew :inspection:inspection-gradle-plugin:lintReport
      -> now passes
Change-Id: I28828c958b721d060013a9bf6a9fdbef826ddd1c

--- a/buildSrc/repos.gradle
+++ b/buildSrc/repos.gradle
@@ -67,9 +67,7 @@ def addMavenRepositories(RepositoryHandler handler) {
         handler.mavenCentral()
         handler.jcenter()
         handler.google()
-        handler.maven {
-            url("https://plugins.gradle.org/m2/")
-        }
+        handler.gradlePluginPortal()
         handler.maven {
                url("https://maven.pkg.jetbrains.space/public/p/compose/dev")
         }
