RxJava2: RxJava wrapper around getForegroundInfoAsync
Test: RxForegroundInfoTest
bug:203851459
Relnote: "
RxWorker has now `getForegroundInfo` returing`Single` that
can be used instead of `getForegroundInfoAsync` that returns
`ListenableFuture`.
"

Change-Id: I21c91cd5db57e85bf1aaa7e1596e2287ab44675c

--- a/work/work-rxjava2/build.gradle
+++ b/work/work-rxjava2/build.gradle
@@ -26,6 +26,7 @@ plugins {
 dependencies {
     api(project(":work:work-runtime"))
     api(libs.rxjava2)
+    testImplementation(libs.truth)
     testImplementation(libs.junit)
     testImplementation(libs.kotlinStdlib)
     testImplementation(libs.mockitoCore)
