Support nulls in ArrayCreatingInputMerger
As a drive by ArrayCreatingInputMerger was rewritten
to kotlin

fixes: 190789503
Test: ArrayCreatingInputMergerTest#testMerge_nulls
Relnote: NA
Change-Id: I0f1570866250103362d310fcfd292c3ccfb668aa

--- a/work/work-runtime/build.gradle
+++ b/work/work-runtime/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     api("androidx.startup:startup-runtime:1.0.0")
     implementation("androidx.core:core:1.1.0")
     implementation("androidx.lifecycle:lifecycle-service:2.1.0")
+    api(libs.kotlinStdlib)
     androidTestImplementation(libs.kotlinStdlib)
     androidTestImplementation(libs.testExtJunit)
     androidTestImplementation(libs.testCore)
