Create new artifact androidx.core:core-performance
Relnote: Starting new project androidx.core:core-performance
Test: n/a
Bug: 203804588
Change-Id: I3d40594fe788cc502c393da1c79f6eb26b6e115f

--- a/docs-tip-of-tree/build.gradle
+++ b/docs-tip-of-tree/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     docs(project(":core:core-appdigest"))
     docs(project(":core:core-google-shortcuts"))
     docs(project(":core:core-ktx"))
+    docs(project(":core:core-performance"))
     docs(project(":core:core-remoteviews"))
     docs(project(":core:core-splashscreen"))
     docs(project(":core:core-role"))
