First draft of Wear Compose Dialog composables.
We provide 3 dialog types:
AlertDialog with Buttons for simple positive/negative choices,
AlertDialog with vertically stacked Chips or ToggleChips
for more flexible choices,
and ConfirmationDialog for displaying an acknowledgement
with a timeout.

Unit tests to follow.

Test: androidx.wear.compose.integration.demos.test
Bug: 204549250, 204189947
Relnote: "We have added 3 new composables for
    displaying dialogs:
    AlertDialog with buttons for simple
    positive/negative choices,
    AlertDialog with vertically stacked chips
    or toggle chips for more flexible choices,
    and ConfirmationDialog for displaying an acknowledgement
    with a timeout."

Change-Id: Ic2cf88647bf55c8c93d7b3d8140249c98af0ccbb

--- a/wear/compose/compose-material/samples/build.gradle
+++ b/wear/compose/compose-material/samples/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation(libs.kotlinStdlib)
 
     compileOnly(project(":annotation:annotation-sampled"))
+    implementation(project(":compose:animation:animation-graphics"))
     implementation(project(":compose:foundation:foundation"))
     implementation(project(":compose:foundation:foundation-layout"))
     implementation(project(":compose:runtime:runtime"))
