Make navigation depend on Fragment 1.4.0
Making navigation dependend explictly on Fragment 1.4.0.

Test: ./gradlew bOS
Change-Id: Ia010d346b7597803b3084d425dce3fec80ce2227

--- a/navigation/navigation-fragment/build.gradle
+++ b/navigation/navigation-fragment/build.gradle
@@ -24,7 +24,7 @@ plugins {
 }
 
 dependencies {
-    api(projectOrArtifact(":fragment:fragment-ktx"))
+    api("androidx.fragment:fragment-ktx:1.4.0")
     api(project(":navigation:navigation-runtime"))
     api("androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01")
     api(libs.kotlinStdlib)
