Create stub PerformanceClass and test
Bug: 205731854
Test: ./gradlew core:core-performance:test
Change-Id: I87b0426f3deca6589c4c2dedcf7578dd28e26569

--- a/core/core-performance/build.gradle
+++ b/core/core-performance/build.gradle
@@ -26,7 +26,9 @@ plugins {
 
 dependencies {
     api(libs.kotlinStdlib)
-    // Add dependencies here
+    testImplementation(libs.kotlinStdlib)
+    testImplementation(libs.junit)
+    testImplementation(libs.truth)
 }
 
 androidx {
